--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -64,7 +64,7 @@
       <div class="main">
         <div class="breadcrumb">
           <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li><a href="inscripcion.html">Entradas</a></li>
           </ul>
         </div>
@@ -177,7 +177,11 @@
           <div class="contactos">
             <img id="iconos" src="../images/iconos/rss.png" alt="RSS" />
             <img id="iconos" src="../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../images/iconos/facebook.png" alt="Facebook" />
+            <img
+              id="iconos"
+              src="../images/iconos/facebook.png"
+              alt="Facebook"
+            />
             <img id="iconos" src="../images/iconos/insta.png" alt="Instagram" />
           </div>
           <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
