--- a/informacion/bases/concursos.html
+++ b/informacion/bases/concursos.html
@@ -62,11 +62,22 @@
     </header>
     <main>
       <div class="main">
+        <div class="breadcrumb">
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="./concursos.html">Concursos</a></li>
+          </ul>
+        </div>
+        <div class="titleBox">
+          <div id="title">
+            <span>Concursos</span>
+          </div>
+        </div>
         <div class="content">
-          <button class="accordion">
+          <button class="accordion" id="acordeon1">
             Asian Cover Dance
           </button>
-          <div class="panel">
+          <div class="panel" >
             <ul>
               <li>
                 La participación en el concurso implica la aceptación de las
@@ -185,10 +196,16 @@
               </li>
             </ul>
           </div>
-          <button class="accordion">
+
+
+          <button class="accordion" id="acordeon2">
             Pop Culture Hiroshima
           </button>
           <div class="panel">
+            <button class="accordion">
+              General
+            </button>
+            <div class="panel">
             <ul>
               <li>
                 Los participantes deberán haber cumplido la mayoría de edad.
@@ -319,9 +336,11 @@
                 casa.
               </li>
             </ul>
-            <h2>
-              JURADO
-            </h2>
+            </div>
+            <button class="accordion">
+              Jurado
+            </button>
+            <div class="panel">
             <ul>
               <li>
                 El jurado estará formado por Ginny Di y Shirogane-sama.
@@ -354,9 +373,12 @@
                 La decisión del jurado será irrevocable.
               </li>
             </ul>
-            <h2>
-              CRITERIOS DE EVALUACIÓN
-            </h2>
+            </div>
+            <button class="accordion">
+              Criterios de evaluación
+            </button>
+            <div class="panel">
+
             <ul>
               <li>
                 El cosplay será juzgado en un 20% por su confección y fidelidad
@@ -365,9 +387,11 @@
                 anterioridad tal y como comentamos en la norma número 5.
               </li>
             </ul>
-            <h2>
+            <button class="accordion">
               Confección
-            </h2>
+            </button>
+            <div class="panel">
+
             <ul>
               <li>
                 La calidad de la confección del traje será juzgada en general,
@@ -410,9 +434,12 @@
                 acabados.
               </li>
             </ul>
-            <h2>
+            </div>
+            <button class="accordion">
               Actuación e Interpretación
-            </h2>
+            </button>
+            <div class="panel">
+
             <ul>
               <li>
                 Las actuaciones deben durar de 1:30 a 2:30 minutos. Se admitirá
@@ -465,108 +492,122 @@
                 uno de cada color para evitar confusiones.
               </li>
             </ul>
+            </div>
+          </div>
           </div>
           <button class="accordion">
             Karaoke
           </button>
           <div class="panel">
-            <h2>
+            <button class="accordion">
               Inscripción
-            </h2>
-            <ul>
-              <li>
-                La inscripción se realizará in situ, es decir, el día del
-                concurso, podréis inscribiros el domingo desde la apertura del
-                evento hasta las 13:50. La inscripción será en el escenario
-                secundario.
-              </li>
-              <li>
-                El audio se entregará en el escenario secundario en el momento
-                de la inscripción o cuando lo indique el técnico de sonido, no
-                se aceptarán audios entregados más tarde de las 14:30. La pista
-                de audio deberá cumplir las normas establecidas en estas bases;
-                de lo contrario la organización cortará el audio si pasa el
-                tiempo límite o no lo reproducirá si no cumple las bases.
-              </li>
-            </ul>
-            <h2>
+            </button>
+            <div class="panel">
+              <ul>
+                <li>
+                  La inscripción se realizará in situ, es decir, el día del
+                  concurso, podréis inscribiros el domingo desde la apertura del
+                  evento hasta las 13:50. La inscripción será en el escenario
+                  secundario.
+                </li>
+                <li>
+                  El audio se entregará en el escenario secundario en el momento
+                  de la inscripción o cuando lo indique el técnico de sonido, no
+                  se aceptarán audios entregados más tarde de las 14:30. La
+                  pista de audio deberá cumplir las normas establecidas en estas
+                  bases; de lo contrario la organización cortará el audio si
+                  pasa el tiempo límite o no lo reproducirá si no cumple las
+                  bases.
+                </li>
+              </ul>
+            </div>
+            <button class="accordion">
               Participación
-            </h2>
-            <ul>
-              <li>
-                Los participantes podrán presentarse de manera individual o
-                grupal sin ningún límite de edad.
-              </li>
-              <li>
-                Los participantes deberán enseñar el DNI, escribir el e-mail y
-                teléfono y un nick/nombre por el que ser llamados para
-                inscribirse.
-              </li>
-              <li>
-                Habrá un máximo de 20 plazas con 5 suplentes en el caso de que
-                algún participante llegase tarde.
-              </li>
-              <li>
-                Los participantes deberán llevar la canción en un USB y en
-                formato .mp3.
-              </li>
-              <li>
-                Los participantes deberán estar en el escenario secundario 20
-                minutos antes de comenzar el concurso.
-              </li>
-              <li>
-                La participación en el concurso supone la aceptación de las
-                bases y el permiso para tomar fotografías y vídeos de dicha
-                participación.
-              </li>
-            </ul>
-            <h2>
+            </button>
+            <div class="panel">
+              <ul>
+                <li>
+                  Los participantes podrán presentarse de manera individual o
+                  grupal sin ningún límite de edad.
+                </li>
+                <li>
+                  Los participantes deberán enseñar el DNI, escribir el e-mail y
+                  teléfono y un nick/nombre por el que ser llamados para
+                  inscribirse.
+                </li>
+                <li>
+                  Habrá un máximo de 20 plazas con 5 suplentes en el caso de que
+                  algún participante llegase tarde.
+                </li>
+                <li>
+                  Los participantes deberán llevar la canción en un USB y en
+                  formato .mp3.
+                </li>
+                <li>
+                  Los participantes deberán estar en el escenario secundario 20
+                  minutos antes de comenzar el concurso.
+                </li>
+                <li>
+                  La participación en el concurso supone la aceptación de las
+                  bases y el permiso para tomar fotografías y vídeos de dicha
+                  participación.
+                </li>
+              </ul>
+            </div>
+
+            <button class="accordion">
               Interpretación
-            </h2>
-            <ul>
-              <li>
-                La canción no podrá sobrepasar los 3 minutos y deberá ser
-                instrumental a excepción de incluir coros para una buena
-                valoración del jurado. Recordad que si entregáis un audio
-                superior a 3 minutos se cortará o no se reproducirá.
-              </li>
-              <li>
-                Así mismo, la letra de la canción deberá estar en japonés, a
-                excepción de que alguna palabra o frase aparezca en inglés o
-                español.
-              </li>
-              <li>
-                Se valorará la actuación y vestimenta de los participantes
-                —acorde a la serie o grupo— pero no será determinante para
-                ganar, puesto que en este concurso se valora la voz.
-              </li>
-              <li>
-                Queda permitido cantar con la letra a la vista pero restará
-                puntos de cara a la valoración final.
-              </li>
-            </ul>
-            <h2>
-              Jurado y premios
-            </h2>
-            <p>
-              El jurado será presentado antes del concurso. Dicho jurado
-              otorgará los siguientes premios, siendo su decisión inalterable
-              una vez emitida:
-            </p>
-            <ul>
-              <li>
-                Primer premio: 100€, dar un concierto y ser jurado en la próxima
-                edición de Manguca 2020 (imprescindible presentarse únicamente
-                si se planea la asistencia a dicha edición y avisar por las RRSS
-                del e-mail posteriormente para mantener el contacto).
-              </li>
-              <li>
-                Segundo premio: 50€
-              </li>
-              <li>
-                Tercer premio: 25€
-              </li>
-            </ul>
+            </button>
+            <div class="panel">
+              <ul>
+                <li>
+                  La canción no podrá sobrepasar los 3 minutos y deberá ser
+                  instrumental a excepción de incluir coros para una buena
+                  valoración del jurado. Recordad que si entregáis un audio
+                  superior a 3 minutos se cortará o no se reproducirá.
+                </li>
+                <li>
+                  Así mismo, la letra de la canción deberá estar en japonés, a
+                  excepción de que alguna palabra o frase aparezca en inglés o
+                  español.
+                </li>
+                <li>
+                  Se valorará la actuación y vestimenta de los participantes
+                  —acorde a la serie o grupo— pero no será determinante para
+                  ganar, puesto que en este concurso se valora la voz.
+                </li>
+                <li>
+                  Queda permitido cantar con la letra a la vista pero restará
+                  puntos de cara a la valoración final.
+                </li>
+              </ul>
+            </div>
+              <button class="accordion">
+                Jurado y premios
+              </button>
+              <div class="panel">
+                <p>
+                  El jurado será presentado antes del concurso. Dicho jurado
+                  otorgará los siguientes premios, siendo su decisión
+                  inalterable una vez emitida:
+                </p>
+                <ul>
+                  <li>
+                    Primer premio: 100€, dar un concierto y ser jurado en la
+                    próxima edición de Manguca 2020 (imprescindible presentarse
+                    únicamente si se planea la asistencia a dicha edición y
+                    avisar por las RRSS del e-mail posteriormente para mantener
+                    el contacto).
+                  </li>
+                  <li>
+                    Segundo premio: 50€
+                  </li>
+                  <li>
+                    Tercer premio: 25€
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -631,5 +672,7 @@
       </div>
     </footer>
     <script src="../../js/acordeon.js"></script>
+    <script src="../../js/acordeon-color.js"></script>
+
   </body>
 </html>
