--- a/informacion/invitados/ginny.html
+++ b/informacion/invitados/ginny.html
@@ -80,7 +80,7 @@
           <div id="information">
             <div class="breadcrumb">
               <ul>
-                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../../index.html">Inicio</a></li>
                 <li><a href="../invitados.html">Invitados</a></li>
                 <li><a href="ginny.html">Ginny Di</a></li>
               </ul>
