--- a/horarios/horarios.html
+++ b/horarios/horarios.html
@@ -61,7 +61,7 @@
       <div class="main">
         <div class="breadcrumb">
           <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li><a href="horarios.html">Horarios</a></li>
           </ul>
         </div>
