--- a/informacion/bases/politica.html
+++ b/informacion/bases/politica.html
@@ -62,6 +62,17 @@
     </header>
     <main>
       <div class="main">
+        <div class="breadcrumb">
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="./politica.html">Política</a></li>
+          </ul>
+        </div>
+        <div class="titleBox">
+          <div id="title">
+            <span>Política</span>
+          </div>
+        </div>
         <div class="content">
           <button class="accordion">1. INFORMACIÓN Y CONSENTIMIENTO.</button>
           <div class="panel">
