--- a/informacion/bases/torneos.html
+++ b/informacion/bases/torneos.html
@@ -62,6 +62,17 @@
     </header>
     <main>
       <div class="main">
+        <div class="breadcrumb">
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="./torneos.html">Torneos</a></li>
+          </ul>
+        </div>
+        <div class="titleBox">
+          <div id="title">
+            <span>Torneos</span>
+          </div>
+        </div>
         <div class="content">
           <button class="accordion">
             1. Inscripción
