--- a/informacion/bases/voluntariado.html
+++ b/informacion/bases/voluntariado.html
@@ -62,6 +62,17 @@
     </header>
     <main>
       <div class="main">
+        <div class="breadcrumb">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./voluntariado.html">Voluntariado</a></li>
+          </ul>
+        </div>
+        <div class="titleBox">
+          <div id="title">
+            <span>Voluntariado</span>
+          </div>
+        </div>
         <div class="content">
           <article>
             <h1>
