--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -63,7 +63,7 @@
       <div class="main">
         <div class="breadcrumb">
           <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li><a href="concursos.html">Concursos</a></li>
           </ul>
         </div>
