--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -64,7 +64,7 @@
       <div class="main">
         <div class="breadcrumb">
           <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li><a href="invitados.html">Invitados</a></li>
           </ul>
         </div>
