--- a/informacion/invitados/poltattoo.html
+++ b/informacion/invitados/poltattoo.html
@@ -82,7 +82,7 @@
           <div id="information">
             <div class="breadcrumb">
               <ul>
-                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../../index.html">Inicio</a></li>
                 <li><a href="../invitados.html">Invitados</a></li>
                 <li><a href="poltattoo.html">Pol Tattoo</a></li>
               </ul>
