--- a/localizacion/localizacion.html
+++ b/localizacion/localizacion.html
@@ -64,7 +64,7 @@
       <div class="main">
         <div class="breadcrumb">
           <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li><a href="localizacion.html">Localización</a></li>
           </ul>
         </div>
