--- a/informacion/invitados/ladybeard.html
+++ b/informacion/invitados/ladybeard.html
@@ -129,6 +129,51 @@
                     allowfullscreen
                   ></iframe>
                 </div>
+                <table>
+                  <tbody>
+                    <tr>
+                      <th>Grupo</th>
+                      <th>Sencillos</th>
+                    </tr>
+
+                    <tr>
+                      <td>LadyBaby</td>
+                      <td>
+                        Nippon Manju <br />
+                        Age-age money<br />
+                        Range chance<br />
+                        C'est si bon Kibun<br />
+                        Bear-chan Robot<br />
+                        Legion<br />
+                        Biri Biri Money
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        Deadlift Lolita
+                      </td>
+                      <td>
+                        SIX PACK TWINS<br />
+                        Kimi Terasu Sairiumu <br />
+                        Pump Up JAPAN<br />
+                        Muscle cocktail
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        FEAT
+                      </td>
+                      <td>
+                        Valentin Kiss <br />
+                        Ghost Wanchanarujyan<br />
+                        Super D&D<br />
+                        Biri Biri Money
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
               </article>
             </div>
           </div>
