--- a/informacion/invitados/faky.html
+++ b/informacion/invitados/faky.html
@@ -138,6 +138,47 @@
                   donde podréis conocerla y comprar su merchandising. ¡Os
                   esperamos!
                 </p>
+                <table>
+                  <tbody>
+
+                    <tr>
+                      <th>Año</th>
+                      <th>Disco</th>
+                      <th>Premios</th>
+                    </tr>
+
+                    <tr>
+                      <td>2014</td>
+                      <td>
+                        The One
+                      </td>
+                      <td>
+                         -
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>2016</tc>
+                      <td>
+                        Candy
+                      </td>
+                      <td>
+                        MTV Video Music Award
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>2017</td>
+                      <td>
+                        Unwrapped
+                      </td>
+                      <td>
+                        -
+                      </td>
+                    </tr>
+
+                  </tbody>
+                </table>
               </article>
             </div>
           </div>
