--- a/informacion/invitados/halex.html
+++ b/informacion/invitados/halex.html
@@ -122,6 +122,47 @@
                     id="picture-article"
                   />
                 </div>
+                <table>
+                  <tbody>
+
+                    <tr>
+                      <th>Año</th>
+                      <th>Disco</th>
+                      <th>Premios</th>
+                    </tr>
+
+                    <tr>
+                      <td>2014</td>
+                      <td>
+                        The One
+                      </td>
+                      <td>
+                         -
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>2016</tc>
+                      <td>
+                        Candy
+                      </td>
+                      <td>
+                        MTV Video Music Award
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>2017</td>
+                      <td>
+                        Unwrapped
+                      </td>
+                      <td>
+                        -
+                      </td>
+                    </tr>
+
+                  </tbody>
+                </table>
               </article>
             </div>
           </div>
