--- a/informacion/bases/concursos.html
+++ b/informacion/bases/concursos.html
@@ -392,7 +392,7 @@
                   norma número 5.
                 </li>
               </ul>
-              <button class="accordion1">
+              <button class="accordion">
                 Confección
               </button>
               <div class="panel">
