--- a/informacion/invitados/sukisha.html
+++ b/informacion/invitados/sukisha.html
@@ -139,7 +139,7 @@
                 <tr>
                   <td>2014</td>
                   <td>
-                    The One
+                    Segment of Cakes
                   </td>
                   <td>
                      -
@@ -149,22 +149,34 @@
                 <tr>
                   <td>2016</tc>
                   <td>
-                    Candy
+                    Junk Food Society
                   </td>
                   <td>
-                    MTV Video Music Award
+                    MTV Video Music Award<br>
+                    Teen Choice Award
                   </td>
                 </tr>
 
                 <tr>
                   <td>2017</td>
                   <td>
-                    Unwrapped
+                    Beside Your Bedside
                   </td>
                   <td>
-                    -
+                    People's Choice Awards
                   </td>
                 </tr>
+                <tr>
+                  <td>2017</td>
+                  <td>
+                    Over the Rainbow
+                  </td>
+                  <td>
+                    American Music Award<br>
+                    Grammy Award
+                  </td>
+                </tr>
+
 
               </tbody>
             </table>
