--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <p>Últimas confirmaciones</p>
             </div>
             <div class="artist">
-              <a href="./images/invitados/overwatchvoices.html"
+              <a href="./informacion/invitados/overwatchvoices.html"
                 ><img id="confirmation" src="./images/artistas/artist11.jpg"
               /></a>
               <div class="text">
@@ -81,13 +81,13 @@
                   <p>Actor</p>
                 </div>
                 <div id="titles">
-                  Voces de overwatch
+                  Voces de Overwatch
                 </div>
               </div>
             </div>
 
             <div class="artist">
-              <a href="./images/invitados/poltattoo.html">
+              <a href="./informacion/invitados/poltattoo.html">
                 <img id="confirmation" src="./images/artistas/artist12.jfif" />
               </a>
               <div class="text">
