--- a/index.html
+++ b/index.html
@@ -66,41 +66,108 @@
           <img id="banner" src="./images/index/banner2.jpg" alt="logo" />
         </div>
         <div class="content">
-          <div class="section1">
+          <div class="section">
             <!--confirmaciones-->
             <div class="title">
               <!--texto-->
-              <p>Últimas confirmaciones</p>
+              <h1>Últimas confirmaciones</h1>
             </div>
-            <div class="artist">
-              <a href="./informacion/invitados/overwatchvoices.html"
-                ><img id="confirmation" src="./images/artistas/artist11.jpg"
-              /></a>
-              <div class="text">
-                <div id="rol">
-                  <p>Actor</p>
-                </div>
-                <div id="titles">
-                  Voces de Overwatch
+            <div class="artists">
+              <div class="artist">
+                <a href="./informacion/invitados/overwatchvoices.html"
+                  ><img id="confirmation" src="./images/artistas/artist11.jpg"
+                /></a>
+                <div class="text">
+                  <div id="rol">
+                    <p>Actor</p>
+                  </div>
+                  <div id="titles">
+                    Voces de Overwatch
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="artist">
-              <a href="./informacion/invitados/poltattoo.html">
-                <img id="confirmation" src="./images/artistas/artist12.jfif" />
-              </a>
-              <div class="text">
-                <div id="rol">
-                  <p>Arte</p>
-                </div>
-                <div id="titles">
-                  Pol Tattoo
+              <div class="artist">
+                <a href="./informacion/invitados/poltattoo.html">
+                  <img
+                    id="confirmation"
+                    src="./images/artistas/artist12.jfif"
+                  />
+                </a>
+                <div class="text">
+                  <div id="rol">
+                    <p>Arte</p>
+                  </div>
+                  <div id="titles">
+                    Pol Tattoo
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+
+          <div class="banner">
+            <a href="./entradas/inscripcion.html"
+              ><h1>¡Consigue ya tu entrada!</h1></a
+            >
+          </div>
+          <div class="section">
+            <div class="title">
+              <!--texto-->
+              <h1>Concursos</h1>
+            </div>
+            <div class="artists">
+              <div class="artist">
+                <a href="./informacion/invitados/overwatchvoices.html"
+                  ><img id="confirmation" src="./images/concursos/concurso1.jpg"
+                /></a>
+                <div class="text">
+                  <div id="rol">
+                    <p>Actor</p>
+                  </div>
+                  <div id="titles">
+                    Asian Cover Dance
+                  </div>
+                </div>
+              </div>
+
+              <div class="artist">
+                <a href="./informacion/invitados/poltattoo.html">
+                  <img
+                    id="confirmation"
+                    src="./images/concursos/concurso2.jpg"
+                  />
+                </a>
+                <div class="text">
+                  <div id="rol">
+                    <p>Arte</p>
+                  </div>
+                  <div id="titles">
+                    Pop Culture Hiroshima
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="banner" id="banner2">
+            <div>
+              <h1>
+                Estamos en:
+              </h1>
+            </div>
+            <div class="column2">
+              <h3>Complejo Deportivo</h3>
+              <span> Universidad de Cádiz </span><br />
+              <span>
+                Av Argentina, 10
+              </span>
+              <span>
+                11519 Puerto Real, Cádiz
+              </span>
+            </div>
+          </div>
         </div>
+
         <aside class="news">
           <div class="new">
             <img id="miniature" src="./images/artistas/artist6.jpg" />
