--- a/index.html
+++ b/index.html
@@ -170,21 +170,27 @@
 
         <aside class="news">
           <div class="new">
-            <img id="miniature" src="./images/artistas/artist6.jpg" />
+            <a href="./informacion/noticias/noticia1.html"
+              ><img id="miniature" src="./images/noticias/noticia1.jpg"
+            /></a>
             <div id="description">
-              <p>AAAAAAAAAAAA</p>
+              <p>Falleció Hiroshi Masuoka, la voz del Maestro Roshi</p>
             </div>
           </div>
           <div class="new">
-            <img id="miniature" src="./images/artistas/artist7.jpg" />
+            <a href="./informacion/noticias/noticia2.html"
+              ><img id="miniature" src="./images/noticias/noticia2.jpg"
+            /></a>
             <div id="description">
-              <p>AAAAAAAAAAAA</p>
+              <p>BTS aplaza su gira por España</p>
             </div>
           </div>
           <div class="new">
-            <img id="miniature" src="./images/artistas/artist8.jpg" />
+            <a href="./informacion/noticias/noticia3.html"
+              ><img id="miniature" src="./images/noticias/noticia3.jpg"
+            /></a>
             <div id="description">
-              <p>AAAAAAAAAAAA</p>
+              <p>Nuevo juego de Magic: RPG Magic Legends</p>
             </div>
           </div>
         </aside>
