--- a/informacion/noticias/noticia1.html
+++ b/informacion/noticias/noticia1.html
@@ -10,8 +10,8 @@
     />
     <!-- CSS Main Layout-->
     <link rel="stylesheet" href="../../css/layout.css" />
-    <!-- CSS Invitados-->
-    <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- CSS Noticias-->
+    <link rel="stylesheet" href="../../css/noticias.css" />
     <title>MANGUCA</title>
   </head>
   <body>
@@ -63,7 +63,42 @@
     <main>
       <div class="main">
         <div class="content">
-            
+          <article>
+            <p>
+              Se reportó el fallecimiento del actor de voz Hiroshi Masuoka
+              debido a un cáncer rectal el pasado 21 de marzo, a la edad de 83
+              años.
+            </p>
+            <p>
+              Los familiares del actor realizaron un funeral privado y, de
+              acuerdo con la última voluntad de Masuoka, no realizarán una
+              ceremonia pública.
+            </p>
+            <p>
+              Masuoka nació en la prefectura de Saitama en 1936 y es reconocido
+              ej Japón por su papel como Masuo Fuguta en la serie Sazae-san y
+              Jam Ojisan en la serie Soreike! Anpanman. Sin embargo, el actor ya
+              se había retirado de estos roles en agosto de 2019 debido a su
+              edad.
+            </p>
+            <p>
+              El actor de voz comenzó su interpretación como Masuo en la serie
+              Sazae-san en junio de 1978, y como Jam Ojisan de la serie Soreike!
+              Anpanman desde el inicio de su emisión en 1988. Hideyuki Tanaka y
+              Kouichi Yamadera lo sustiyeron en ambos roles después de su
+              retiro, respectivamente.
+            </p>
+            <p>
+              Otros roles en los que Masuoka participó incluyeron 005 en la
+              serie Cyborg 009, el Maestro Roshi (Kame Senrin en Japón) en los
+              últimos episodios de Dragon Ball Z y las series posteriores,
+              después de la muerte de Kouhei Miyauchi, el padre de Minami en
+              Touch, y como narrador en varias producciones.
+            </p>
+            <p>
+              Que descanse en paz.
+            </p>
+          </article>
         </div>
       </div>
     </main>
