--- a/informacion/noticias/noticia2.html
+++ b/informacion/noticias/noticia2.html
@@ -10,8 +10,8 @@
     />
     <!-- CSS Main Layout-->
     <link rel="stylesheet" href="../../css/layout.css" />
-    <!-- CSS Invitados-->
-    <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- CSS Noticias-->
+    <link rel="stylesheet" href="../../css/noticias.css" />
     <title>MANGUCA</title>
   </head>
   <body>
@@ -63,7 +63,36 @@
     <main>
       <div class="main">
         <div class="content">
-            
+          <article>
+            <p>
+              En las últimas semanas, las redes sociales han sido un hervidero
+              de lamentos, plegarias y ruegos de los fans de la «boy-band»
+              coreana BTS, que temían que el coronavirus obligase a cancelar su
+              gira europea Map of The Soul, ya que el grupo pidió a sus
+              seguidores que no acudieran a sus actos de promoción.
+            </p>
+            <p>
+              Además, tuvo que cancelar el arranque de su gira en su país natal,
+              programado para los días el 11, 12, 18 y 19 de abril en el Estadio
+              Olímpico de Seúl. «El brote de COVID-19 ha hecho imposible
+              predecir en este momento la escala del brote en Seúl durante las
+              fechas de los conciertos en abril», dice su compañía, Big Hit
+              Entertainment, en un comunicado.
+            </p>
+            <p>
+              Pero por fin hay una buena noticia al respecto, ya que finalmente
+              esta alerta sanitaria no detendrá a los reyes del K-Pop, y si las
+              cosas no se tuercen demasiado en los próximos días, sus fans
+              españoles podrán comprar las entradas de sus dos conciertos en el
+              Estadio Olímpico de Barcelona a partir del 20 de marzo.
+            </p>
+            <p>
+              Esta será la mayor gira europea de BTS hasta el momento. Arrancará
+              el 3 de julio en el Twickenham Stadium de Londres y después pasará
+              por Rotterdam y Berlín, antes de finalizar su etapa europea el 17
+              y 18 de julio en el Estadi Olímpic de Barcelona.
+            </p>
+          </article>
         </div>
       </div>
     </main>
