--- a/informacion/noticias/noticia3.html
+++ b/informacion/noticias/noticia3.html
@@ -10,8 +10,8 @@
     />
     <!-- CSS Main Layout-->
     <link rel="stylesheet" href="../../css/layout.css" />
-    <!-- CSS Invitados-->
-    <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- CSS Noticias-->
+    <link rel="stylesheet" href="../../css/noticias.css" />
     <title>MANGUCA</title>
   </head>
   <body>
@@ -63,7 +63,40 @@
     <main>
       <div class="main">
         <div class="content">
-            
+          <article>
+            <p>
+              Magic Legends, el nuevo videojuego de rol y acción de corte free
+              to play basado en la popular franquicia Magic: The Gathering,
+              comparte sus primeros detalles y vídeos de jugabilidad de la mano
+              del medio Game Informer, todo ello a través de una exclusiva con
+              dicho medio. Y es que tras su presentación oficial en la pasada
+              edición de The Game Awards 2019, nada más ha trascendido sobre su
+              peculiar propuesta de juego, totalmente alejada de lo que nos
+              tiene acostumbrados Wizards of the Coast con la marca, ahora en
+              colaboración con Cryptic Studios.
+            </p>
+            <p>
+              Así, y a lo largo de una cobertura exclusiva de Game Informer que
+              se extenderá a lo largo de los próximos meses, conocemos al fin
+              los primeros detalles de su fórmula de juego, un título de Magic:
+              The Gathering que se aleja de la clásica propuesta de juego de
+              estrategia y cartas coleccionables para apostar por un
+              sorprendente universo RPG con acción multijugador en línea.
+            </p>
+            <p>
+              Eso sí, sus creadores no se olvidarán del jugador clásico de
+              Magic, puesto que Legends nos invita a formar nuestro particular
+              mazo de cartas para desatar los poderes, hechizos y ataques sobre
+              el terreno a través de los personajes seleccionados. Con todo,
+              tendremos la oportunidad de escoger hasta 12 cartas para construir
+              nuestro propio set de cartas, a través de las cuales seleccionar
+              un total de 4 para ejecutar los diferentes conjuros y ataques.
+            </p>
+            <p>
+              Se espera que Magic Legends llegue a PC, PS4 y Xbox One en algún
+              momento de este 2020 en formato free to play.
+            </p>
+          </article>
         </div>
       </div>
     </main>
