--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -15,6 +15,8 @@
     <title>MANGUCA</title>
   </head>
   <body>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
     <header>
       <div class="header" id="header">
         <div class="logo">
@@ -145,17 +147,12 @@
                 >Contactar por correo</a
               >
             </div>
-            <div>
-              <a href="./informacion/invitados.html">Sobre nosotros</a>
-            </div>
+
             <div>
               <a href="./informacion/invitados.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
-            <div>
-              <a href="../informacion/invitados.html">Contratación de stands</a>
-            </div>
             <div>
               <a href="../informacion/bases/torneos.html">Bases de Torneos</a>
             </div>
@@ -164,12 +161,11 @@
                 >Bases de Concursos</a
               >
             </div>
-          </div>
-          <div class="colabout">
+
             <div>
               <a href="../informacion/bases/politica.html"
-                >Política de privacidad y protección de datos</a
-              >
+                >Política de privacidad
+              </a>
             </div>
           </div>
         </div>
@@ -189,5 +185,6 @@
       </div>
     </footer>
     <script src="../js/validacion-formulario.js"></script>
+    <script src="../js/scroll.js"></script>
   </body>
 </html>
