--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <title>MANGUCA</title>
   </head>
   <body>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
     <header>
       <div class="header" id="header">
         <div class="logo">
@@ -60,6 +62,7 @@
         </div>
       </div>
     </header>
+
     <main>
       <div class="main">
         <div>
@@ -206,17 +209,12 @@
                 >Contactar por correo</a
               >
             </div>
-            <div>
-              <a href="./informacion/invitados.html">Sobre nosotros</a>
-            </div>
+
             <div>
               <a href="./informacion/bases/voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
-            <div>
-              <a href="./informacion/invitados.html">Contratación de stands</a>
-            </div>
             <div>
               <a href="./informacion/bases/torneos.html">Bases de Torneos</a>
             </div>
@@ -225,11 +223,9 @@
                 >Bases de Concursos</a
               >
             </div>
-          </div>
-          <div class="colabout">
             <div>
               <a href="./informacion/bases/politica.html"
-                >Política de privacidad y protección de datos</a
+                >Política de privacidad</a
               >
             </div>
           </div>
@@ -245,5 +241,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/scroll.js"></script>
   </body>
 </html>
