--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -15,6 +15,8 @@
     <title>MANGUCA</title>
   </head>
   <body>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
     <header>
       <div class="header" id="header">
         <div class="logo">
@@ -333,29 +335,20 @@
                 >Contactar por correo</a
               >
             </div>
-            <div>
-              <a href="./informacion/invitados.html">Sobre nosotros</a>
-            </div>
+
             <div>
               <a href="./informacion/invitados.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="./bases/invitados.html">Contratación de stands</a>
-            </div>
-            <div>
               <a href="./bases/torneos.html">Bases de Torneos</a>
             </div>
             <div>
               <a href="./bases/concursos.html">Bases de Concursos</a>
             </div>
-          </div>
-          <div class="colabout">
             <div>
-              <a href="./bases/politica.html"
-                >Política de privacidad y protección de datos</a
-              >
+              <a href="./bases/politica.html">Política de privacidad</a>
             </div>
           </div>
         </div>
@@ -374,5 +367,6 @@
         </div>
       </div>
     </footer>
+    <script src="../js/scroll.js"></script>
   </body>
 </html>
