--- a/informacion/invitados/faky.html
+++ b/informacion/invitados/faky.html
@@ -15,6 +15,8 @@
     <title>MANGUCA</title>
   </head>
   <body>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
     <header>
       <div class="header" id="header">
         <div class="logo">
@@ -195,28 +197,22 @@
                 >Contactar por correo</a
               >
             </div>
-            <div>
-              <a href="./informacion/invitados.html">Sobre nosotros</a>
-            </div>
+          
             <div>
               <a href="../informacion/invitados.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
-            <div>
-              <a href="./invitados.html">Contratación de stands</a>
-            </div>
+            
             <div>
               <a href="../bases/torneos.html">Bases de Torneos</a>
             </div>
             <div>
               <a href="../bases/concursos.html">Bases de Concursos</a>
             </div>
-          </div>
-          <div class="colabout">
             <div>
               <a href="../bases/politica.html"
-                >Política de privacidad y protección de datos</a
+                >Política de privacidad</a
               >
             </div>
           </div>
@@ -244,5 +240,7 @@
         </div>
       </div>
     </footer>
+ <script src="../../js/scroll.js"></script>
   </body>
+
 </html>
