--- a/localizacion/localizacion.html
+++ b/localizacion/localizacion.html
@@ -15,6 +15,8 @@
     <title>MANGUCA</title>
   </head>
   <body>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
     <header>
       <div class="header" id="header">
         <div class="logo">
@@ -131,17 +133,12 @@
                 >Contactar por correo</a
               >
             </div>
-            <div>
-              <a href="./informacion/invitados.html">Sobre nosotros</a>
-            </div>
+
             <div>
               <a href="./informacion/invitados.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
-            <div>
-              <a href="../informacion/invitados.html">Contratación de stands</a>
-            </div>
             <div>
               <a href="../informacion/bases/torneos.html">Bases de Torneos</a>
             </div>
@@ -150,12 +147,10 @@
                 >Bases de Concursos</a
               >
             </div>
-          </div>
-          <div class="colabout">
             <div>
               <a href="../informacion/bases/politica.html"
-                >Política de privacidad y protección de datos</a
-              >
+                >Política de privacidad
+              </a>
             </div>
           </div>
         </div>
@@ -174,5 +169,6 @@
         </div>
       </div>
     </footer>
+    <script src="../js/scroll.js"></script>
   </body>
 </html>
