--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
     <header>
-      <div class="header" id="header">
+      <div class="header">
         <div class="logo">
           <a href="index.html"
             ><img src="./images/plantilla/logo.png" alt="logo"
