--- a/index3.html
+++ b/index3.html
@@ -25,6 +25,12 @@
           /></a>
         </div>
         <div class="navbar">
+          <div class="icon-bar" onclick="Show()">
+            <i></i>
+            <i></i>
+            <i></i>
+          </div>
+
           <ul id="nav-lists">
             <li class="close"><span onclick="Hide()">×</span></li>
             <li><a href="./informacion/informacion.html">Información</a></li>
